# devops-with-kubernetes

part-1/admin-manifests/: ping-pong-log-ouput-persistent-volume.yaml
part-1/pong/: .gitignore  Cargo.toml  Dockerfile
part-1/pong/manifests/: deployment.yaml  service.yaml
part-1/pong/src/: main.rs
part-1/practice/manifests/: ingress.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
part-1/timestamp-string/: Cargo.toml  Dockerfile
part-1/timestamp-string/mainifests/: deployment.yaml  ingress.yaml
part-1/timestamp-string/manifests/: deployment.yaml  ingress.yaml  service.yaml
part-1/timestamp-string/reader/: Cargo.toml  Dockerfile
part-1/timestamp-string/reader/src/: main.rs
part-1/timestamp-string/src/: main.rs
part-1/timestamp-string/writer/: Cargo.toml  Dockerfile  time.txt
part-1/timestamp-string/writer/src/: main.rs
part-1/todo/: Cargo.toml  Dockerfile
part-1/todo/backend/: .dockerignore  .gitignore  Dockerfile  bun.lockb  package.json
part-1/todo/backend/src/: index.ts
part-1/todo/frontend/: bun.lockb  vite.config.ts
part-1/todo/frontend/src/: App.tsx
part-1/todo/manifests/: deployment.yaml  ingress.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
part-1/todo/public/: index.html
part-1/todo/src/: main.rs
