[package]
name = "timestamp-string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["v4", "rng"] }
